2007-03-20  Marek Habersack  <mhabersack@novell.com>

	* ContextMenuStrip.cs: align with the change introduced in
	revision 74664.

2007-03-20  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIDriver.cs, XplatUIOSX.cs, XplatUIWin32.cs, XplatUIX11.cs, 
	XplatUI.cs, Form.cs, ToolTip.cs: Remove unneeded parameter owner 
	in SetTopmost.

2007-03-19  Chris Toshok  <toshok@ximian.com>

	* Control.cs (WmPaint): don't make use of the Handle property
	after an event is emitted, as the user could have closed the
	form/destroyed the control.  Store the Handle in a local variable
	and make use of that.  Fixes bug #80768.

2007-03-20  Everaldo Canuto  <everaldo@simios.org>

	* XplatUIX11.cs: Set _NET_WM_STATE_ABOVE on SetTopmost, it fixes Topmost
	behavior in X11 environments.

2007-03-20  Everaldo Canuto  <everaldo@simios.org>

	* Form.cs: Call SetTopmost in CreateHandle when window is topmost, its
	because on setter of topmost we dont call SetTopmost when handle is not
	created.

2007-03-20  Jackson Harper  <jackson@ximian.com>

	* TextControl.cs: Need to use SelectionLength () not
	selection_length, since that var is reset to -1.
	- Draw the caret when we don't have focus.
	* TextBox.cs: The selectall actually doesn't occur until the first
	focus.
	* TextBoxBase.cs: Need to update the caret position after a
	selectall.
	
2007-03-20  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: Enable scrolling when using Tile view.

2007-03-20  Everaldo Canuto  <everaldo@simios.org>

	[Fixes #80902]

	* XplatUIDriver.cs: Abstract SetOwner method created.

	* XplatUIOSX.cs: Override SetOwner to prevent compilation errors method 
	must be implemented and was masked as todo.

	* XplatUIWin32.cs: SetOwner implemented using SetWindowLong with 
	GWL_HWNDPARENT.

	* XplatUIX11.cs: SetOwner implemented using same code from SetTopmost but 
	cheking for null owner to remove transient. The SetTopmost will be change
	on a decond step.
